fixed sizing of menu on smaller screens

--- a/css/index.scss
+++ b/css/index.scss
@@ -12,20 +12,6 @@ body {
 	font-family: 'Crimson Text', serif;
 }
 
-.orderButtons {
-
-	display: flex;
-	max-height: 100px;
-	flex-direction: row;
-	justify-content: flex-end;
-	margin-right: 40px;
-
-	.btn {
-		margin: 10px 20px;
-	}
-
-}
-
 .link {
 	color: $mainColor;
 }
@@ -46,17 +32,62 @@ body {
 	font-size: 1.25em;
 }
 
-header {
+header nav {
 
-	nav {
+	display: flex;
+	flex-direction: column;
+	margin: 10px;
+
+	h1 {
+		font-family: "McLaren", cursive;
+	}
+
+	.orderButtons {
+
 		display: flex;
-		padding: 20px;
-		justify-content: space-between;
-		z-index: 100;
+		flex-direction: row;
+		flex-wrap: wrap;
 
-		h1 {
-			font-family: 'McLaren', cursive;
+		.btn {
+			margin: 5px 10px;
 		}
+
+	}
+
+}
+
+@media (min-width: 800px) {
+
+	header {
+
+		nav {
+			margin: 0;
+			display: flex;
+			flex-direction: row;
+			padding: 20px;
+			justify-content: space-between;
+			z-index: 100;
+
+			h1 {
+				font-family: 'McLaren', cursive;
+			}
+
+			.orderButtons {
+
+				display: flex;
+				max-height: 100px;
+				flex-direction: row;
+				justify-content: flex-end;
+				margin-right: 40px;
+
+				.btn {
+					margin: 10px 20px;
+				}
+
+			}
+
+		}
+
 	}
 
 }
